--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
             <div class="project html-one">
                 <div class="description">
                     <h3>Task app lending page</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css">
+                    <p>HTML, CSS</p>
                     <a href="https://granite-cut-keyboard.glitch.me/" target="_blank">View project</a>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <div class="project html-two">
                 <div class="description">
                     <h3>Loruki claud hosting platform</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css">
+                    <p>HTML, CSS</p>
                     <a href="https://loruki-cloud-hosting-platform.netlify.app/index.html" target="_blank">View project</a>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="project one">
                 <div class="description">
                     <h3>Split the bill app</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://yielding-mountain-tablecloth.glitch.me/" target="_blank">View project</a>
                 </div>
             </div>
@@ -68,8 +68,7 @@
             <div class="project two">
                 <div class="description">
                     <h3>Restaurant lending page</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
-                    <img id="tools" src="img/greensock.jpg" alt="greensock">
+                    <p>HTML, CSS, JavaScript, GreenSock</p>
                     <a href="https://ahead-responsible-warrior.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -77,7 +76,7 @@
             <div class="project three">
                 <div class="description">
                     <h3>Todo list application</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://deep-developing-manta.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -85,7 +84,7 @@
             <div class="project four">
                 <div class="description">
                     <h3>Number game</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://adaptable-amplified-agenda.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -93,7 +92,7 @@
             <div class="project five">
                 <div class="description">
                     <h3>Birthday invitation</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://kindhearted-neat-change.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -101,7 +100,7 @@
             <div class="project six">
                 <div class="description">
                     <h3>Movie's trailers</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://fixed-olive-tip.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -109,7 +108,7 @@
             <div class="project seven">
                 <div class="description">
                     <h3>Auto dictionary</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://same-sable-sweater.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -117,7 +116,7 @@
             <div class="project eight">
                 <div class="description">
                     <h3>Furniture store lending page</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://brazen-silicon-aristosuchus.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -125,7 +124,7 @@
             <div class="project nine">
                 <div class="description">
                     <h3>Love is...</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://eminent-pewter-drip.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -133,7 +132,7 @@
             <div class="project ten">
                 <div class="description">
                     <h3>Weather forecast</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://legendary-thin-chevre.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -141,7 +140,7 @@
             <div class="project eleven">
                 <div class="description">
                     <h3>JavaScript quiz</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript, particles.js</p>
                     <a href="https://giant-admitted-earthworm.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -149,7 +148,7 @@
             <div class="project twelve">
                 <div class="description">
                     <h3>Nap app</h3>
-                    <img id="tools" src="img/html-css-js.png" alt="html, css, js">
+                    <p>HTML, CSS, JavaScript</p>
                     <a href="https://nervous-branch-rat.glitch.me" target="_blank">View project</a>
                 </div>
             </div>
@@ -165,7 +164,7 @@
             <div class="project c-one">
                 <div class="description">
                     <h3>Credit</h3>
-                    <p>Program validates and defines the type of credit card (Visa, Master Card, American Express) when you enter card number.</p>
+                    <p>Program defines the type of credit card when you enter card number.</p>
                     <a href="https://github.com/me50/TatianaNam15/blob/cs50/problems/2021/x/credit/credit.c" target="_blank">View project</a>
                 </div>
             </div>
@@ -202,6 +201,10 @@
         </div>
 
         <div class="content-portfolio">
+            <div class="counter">
+                <p><span id="number"></span> / <span id="outof"></span></p>
+            </div>
+
             <div class="slideshow">
                 <button class="slide-btn" id="back"><</button>
                 <div id='cont'>
