--- a/projects.html
+++ b/projects.html
@@ -224,6 +224,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/TextPlugin.min.js"></script>
 
-    <script src="script2.js"></script>
+    <script src="projects.js"></script>
 </body>
 </html>
